minor visual cleanup

--- a/src/components/buttondownsignup.module.css
+++ b/src/components/buttondownsignup.module.css
@@ -11,7 +11,7 @@
 .button {
   display: block;
   width: 100%;
-  background: #0069ff;
+  background: #4f98ff;
   border: 0;
   border-radius: 0.25em;
   color: #fff;
