--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -6,5 +6,10 @@
 
 body {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 120%;
   color: #333;
+}
+
+li {
+  margin-bottom: 10px;
 }
