--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -8,6 +8,30 @@ body {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: 120%;
   color: #333;
+
+  /*from https://www.gradient-animator.com/ */
+  background: linear-gradient(225deg, #b3dff3, #d9e8f0);
+  background-size: 400% 400%;
+
+  -webkit-animation: AnimationName 20s ease infinite;
+  -moz-animation: AnimationName 20s ease infinite;
+  animation: AnimationName 20s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+  0%{background-position:0% 99%}
+  50%{background-position:100% 2%}
+  100%{background-position:0% 99%}
+}
+@-moz-keyframes AnimationName {
+  0%{background-position:0% 99%}
+  50%{background-position:100% 2%}
+  100%{background-position:0% 99%}
+}
+@keyframes AnimationName {
+  0%{background-position:0% 99%}
+  50%{background-position:100% 2%}
+  100%{background-position:0% 99%}
 }
 
 li {
