--- a/src/components/buttondownsignup.module.css
+++ b/src/components/buttondownsignup.module.css
@@ -1,10 +1,8 @@
 .popout {
   background: #ecf4fa;
-  padding-top: 15px;
-  padding-bottom: 5px;
   margin-bottom: 1em;
   margin-top: 1em;
-  padding: 10px 20px;
+  padding: 15px;
   border-radius: 5px;
 }
 
@@ -21,7 +19,7 @@
   font-size: 16px;
   box-sizing: border-box;
   cursor: pointer;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.1em;
 }
 
 .textarea {
@@ -30,7 +28,7 @@
   display: block;
   padding: 0.75em 1em;
   width: 100%;
-  margin-bottom: 1em;
+  margin-bottom: .5em;
   box-sizing: border-box;
   font-size: 16px;
   line-height: 1.4em;
