--- a/src/components/buttondownsignup.module.css
+++ b/src/components/buttondownsignup.module.css
@@ -2,38 +2,33 @@
   background: #ecf4fa;
   margin-bottom: 1em;
   margin-top: 1em;
-  padding: 15px;
-  border-radius: 5px;
+  padding: .5em;
+  border-radius: 0.5em;
 }
 
 .button {
   display: block;
   width: 100%;
-  background: #4f98ff;
+  background: #366fbe;
   border: 0;
-  border-radius: 0.25em;
+  border-radius: 0.4em;
   color: #fff;
   outline: 0;
-  padding: 0.75em 1em;
+  padding: 0.5em;
   width: 100%;
   font-size: 16px;
   box-sizing: border-box;
   cursor: pointer;
-  margin-bottom: 0.1em;
 }
 
 .textarea {
   border: 1px solid #ced3d9;
-  border-radius: 4px;
+  border-radius: 0.4em;
   display: block;
-  padding: 0.75em 1em;
+  padding: 0.5em;
   width: 100%;
   margin-bottom: .5em;
   box-sizing: border-box;
   font-size: 16px;
   line-height: 1.4em;
-}
-
-.referral {
-  font-size: 12px;
 }
