--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -5,34 +5,13 @@
 }
 
 body {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: "Ovo", Helvetica, Arial, sans-serif;
   font-size: 120%;
-  color: #333;
+  color: #08080F;
 
-  /*from https://www.gradient-animator.com/ */
-  background: linear-gradient(225deg, #b3dff3, #d9e8f0);
-  background-size: 400% 400%;
-
-  -webkit-animation: AnimationName 20s ease infinite;
-  -moz-animation: AnimationName 20s ease infinite;
-  animation: AnimationName 20s ease infinite;
+  background-color: #E8F0EC;
 }
 
-@-webkit-keyframes AnimationName {
-  0%{background-position:0% 100%}
-  50%{background-position:100% 0%}
-  100%{background-position:0% 100%}
-}
-@-moz-keyframes AnimationName {
-  0%{background-position:0% 100%}
-  50%{background-position:100% 0%}
-  100%{background-position:0% 100%}
-}
-@keyframes AnimationName {
-  0%{background-position:0% 100%}
-  50%{background-position:100% 0%}
-  100%{background-position:0% 100%}
-}
 
 li {
   margin-bottom: 10px;
