fix serif font fallbacks

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "Ovo", Helvetica, Arial, sans-serif;
+  font-family: "Ovo", 'Times New Roman', Times, serif;
   font-size: 120%;
   color: #08080F;
 
