--- a/src/styles/global.module.css
+++ b/src/styles/global.module.css
@@ -18,3 +18,21 @@ blockquote {
   color: inherit;
   text-decoration: inherit;
 }
+
+/* Anchors that allow for AppBar space, based on ".makeStyles-offset-1" of 56, 48, 64 */
+.anchorOffset {
+  display: block;
+  position: relative;
+  top: -66px;
+  visibility: hidden;
+}
+@media (min-width:0px) and (orientation: landscape) {
+  .anchorOffset {
+    top: -58px;
+  }
+}
+@media (min-width:600px) {
+  .anchorOffset {
+    top: -74px;
+  }
+}
